--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Clone da pagina inicial do instagram</title>
 </head>
 
@@ -13,13 +13,13 @@
   <section class="instagram-wrapper">
     
     <div class="instagram-phone">
-      <img src="assets/img/instagram-celular.png" alt="celular">
-      <img src="assets/img/fundo-celular.jpg" alt="tela">
+      <img src="./assets/img/instagram-celular.png" alt="celular">
+      <img src="./assets/img/fundo-celular.jpg" alt="tela">
     </div>
 
     <div class="instagram-login">
       <div class="group">
-        <img class="instagram-logo" src="assets/img/instagram-logo.png" alt="logo instagram">
+        <img class="instagram-logo" src="./assets/img/instagram-logo.png" alt="logo instagram">
         
         <input type="text" placeholder="Telefone, usuario ou email">
         <input type="password" placeholder="senha">
