--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <input type="text" placeholder="Telefone, usuario ou email">
         <input type="password" placeholder="senha">
-        <button>Entrar</button>
+        <button class="button">Entrar</button>
         <p class="line">ou</p>
         <p class="p-fb">Entrar com o facebook</p>
         <p class="p-pw">Esqueceu a senha?</p>
